# lazywallet

./: Cargo.toml  LICENSE.md  README.md
docs/: architecture.md  candlestick-alignment.md
src/: app.rs  lib.rs  main.rs
src/api/: mod.rs  yahoo.rs
src/models/: mod.rs  ohlc.rs  ticker.rs  watchlist_item.rs
src/ui/: candlestick_text.rs  chart.rs  dashboard.rs  events.rs  mod.rs
